# github-actions-executor

./: Dockerfile  pyproject.toml
.github/workflows/: build.yml  demo.yml  executor.yml
examples/: build_image_pipeline.yaml  pipeline_example.yaml  release_pipeline.yaml
github_actions_executor/: __main__.py  fetcher.py
github_actions_executor/api/: __init__.py  base.py
github_actions_executor/api/v1/: __init__.py  loom_config.py  loom_pipeline.py  register.py
github_actions_executor/decoder/: __init__.py  yaml_decoder.py
github_actions_executor/generator/: __init__.py  workflow_generator.py
github_actions_executor/scheme/: __init__.py  registry.py
github_actions_executor/validator/: __init__.py  validators.py
